<resources>
    <string name="app_name">Grade_calculator</string>
    <string name="sttitle">RVCE_Grade_calculator</string>
    <string name="stname">Student Name</string>
    <string name="cie">CIE Marks</string>
    <string name="see">SEE Marks</string>
    <string name="grade">grade</string>
    <string name="calculate">calculate</string>
    <string name="clear">clear</string>
    <string name="info">To know about the grading system view pdf(page no: 26)
        \n
        https://www.rvce.edu.in/sites/default/files/2018-Handbook%20with%20annexure.pdf</string>
</resources>